<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerateQRCodeActivity">

    <EditText
        android:id="@+id/inputText"
        android:layout_width="353dp"
        android:layout_height="67dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/inputText"
        android:text="@string/input_ibox_nformation"
        app:layout_constraintBottom_toTopOf="@+id/QRCodeImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        tools:targetApi="o" />

    <Button
        android:id="@+id/generateCodeBtn"
        android:layout_width="166dp"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/generate_qr_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText" />

    <ImageView
        android:id="@+id/QRCodeImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/here_qr_code_will_be_placed"
        app:layout_constraintBottom_toTopOf="@+id/scanBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateCodeBtn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="?attr/actionBarDivider" />

    <TextView
        android:id="@+id/generatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_code_generated"
        app:layout_constraintBottom_toTopOf="@+id/QRCodeImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText"
        app:layout_constraintVertical_bias="0.811" />

    <Button
        android:id="@+id/scanBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="8dp"
        android:text="@string/scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QRCodeImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>